<resources>
    <string name="app_name">Shopping list</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete Item</string>
    <string name="action_clear">Clear List</string>
    <string name="add_to_bag">Add to shopping list</string>
    <string name="enterName">Enter name</string>
    <string name="myName">Shopping list for: </string>
    <string name="myGender">Gender:</string>
    <string name="male">Male</string>
    <string name="confirmation">Confirmation</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="female">Female</string>
    <string name="share">Share</string>

    <string-array name="variant_array">
        <item>kg.</item>
        <item>gr.</item>
        <item>ml.</item>
        <item>l.</item>
        <item>pc.</item>
    </string-array>
</resources>
